[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "nnf"
version = "0.1.0"
requires-python = ">=3.6"
dependencies = [
    "kubernetes>=12.0,<24",
]

[project.scripts]
nnf = "nnf:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.6"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
