[build-system]
# pip evaluates environment markers here even though PEP 518 does not
# require it; this works because pip is the only frontend used in CI.
# 59.6.0 is the last setuptools release that supports Python 3.6.
requires = [
    "setuptools>=59.6.0; python_version < '3.7'",
    "setuptools>=61; python_version >= '3.7'",
]
build-backend = "setuptools.build_meta"

[project]
name = "nnf"
version = "0.1.0"
requires-python = ">=3.6"
dependencies = [
    "kubernetes>=12.0,<24",
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.5,<7.1; python_version < '3.7'",
    "pytest>=7.3.2,<9; python_version >= '3.7'",
]

[project.scripts]
nnf = "nnf:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.6"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
